--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -97,29 +97,39 @@
         {% block content %}
         <div class="container justify-content-center d-flex">
             <div class="form-structor zoomer">
-                <div class="signup slide-up">
-                    <h2 class="form-title" id="signup">
-                        <span>or</span>註冊
-                    </h2>
-                    <div class="form-holder">
-                        <input type="number" class="input" placeholder="統一編號" name="uniform_numbers" />
-                        <input type="email" class="input" placeholder="E-mail" name="email" />
-                        <input type="password" class="input" placeholder="密碼" name="psw" />
-                    </div>
-                    <button class="submit-btn">註冊</button>
-                </div>
-                <div class="login ">
-                    <div class="center">
-                        <h2 class="form-title" id="login">
-                            <span>or</span>登入
+                <form method="post" action="">
+                    {% csrf_token %}
+                    <div class="signup slide-up">
+                        <h2 class="form-title" id="signup">
+                            <span>or</span>註冊
                         </h2>
                         <div class="form-holder">
-                            <input type="number" class="input" placeholder="統一編號" name="uniform_numbers" />
-                            <input type="password" class="input" placeholder="密碼" name="psw" />
+                            <input type="tel" class="input" placeholder="統一編號" name="uniform_numbers" />
+                            <input type="password" class="input" placeholder="密碼" name="psw" id="password" />
+                            <input type="password" class="input" placeholder="再次輸入密碼" id="password_confirm" />
+                            <p class="text-center mt-2">
+                                <small class="text-danger" style="font-size: 60%;">請輸入6到15位數字或英文作為密碼</small>
+                            </p>
                         </div>
-                        <button class="submit-btn">登入</button>
+                        <div id="password_error" class="text-danger text-center"></div>
+                        <button type="submit" class="submit-btn">註冊</button>
                     </div>
-                </div>
+                </form>
+                <form method="post" action="">
+                    {% csrf_token %}
+                    <div class="login ">
+                        <div class="center">
+                            <h2 class="form-title" id="login">
+                                <span>or</span>登入
+                            </h2>
+                            <div class="form-holder">
+                                <input type="tel" class="input" placeholder="統一編號" name="uniform_numbers" />
+                                <input type="password" class="input" placeholder="密碼" name="psw" />
+                            </div>
+                            <button type="submit" class="submit-btn">登入</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
 
@@ -139,6 +149,18 @@
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
     <script src="{%static 'client_style.js'%}"></script>
+    <script>
+        document.querySelector("#password_confirm").addEventListener("input", function () {
+            const password = document.querySelector("#password").value;
+            const passwordConfirm = this.value;
+
+            if (password !== passwordConfirm) {
+                document.querySelector("#password_error").textContent = "密碼不匹配";
+            } else {
+                document.querySelector("#password_error").textContent = "";
+            }
+        });
+    </script>
 </body>
 
 </html>
