--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -21,7 +21,7 @@
     <div class="mb-5 bg-gradient">
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-white">
             <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="/clt/">
+                <a class="navbar-brand d-flex align-items-center">
                     <img class="nav-link" style="width: 48px;" src="{% static 'backfix_icon.png' %}"
                         title="foodbone">後臺管理系統
                 </a>
@@ -79,12 +79,22 @@
                     </li> -->
                     <ul class="navbar-nav justify-content-end">
                         <li class="nav-item ">
+                            <a class="nav-link d-flex align-items-center " href='/'>
+                                <img class="nav-link" style="width: 48px;" src="{% static 'market_icon.png' %}"
+                                    title="前往商場">前往商場
+                            </a>
+                        </li>
+                    </ul>
+                    {% if user_logout %}
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item ">
                             <a class="nav-link d-flex align-items-center " href='/clt/logout/'>
                                 <img class="nav-link" style="width: 48px;" src="{% static 'logout_icon.png' %}"
                                     title="登出">登出
                             </a>
                         </li>
                     </ul>
+                    {% endif %}
                     <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -96,7 +106,7 @@
     {%if succmesg %}
     <div class="d-flex justify-content-center">
         <div class="alert alert-success alert-dismissible fade show " role="alert">
-            <strong >恭喜!</strong>{{succmesg}}
+            <strong>恭喜!</strong>{{succmesg}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
@@ -104,7 +114,7 @@
     {% if errmesg %}
     <div class="d-flex justify-content-center">
         <div class="alert alert-danger alert-dismissible fade show d-flex justify-content-center" role="alert">
-            <strong >錯誤!</strong>{{errmesg}}
+            <strong>錯誤!</strong>{{errmesg}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
