--- a/app/templates/client_basic_info.html
+++ b/app/templates/client_basic_info.html
@@ -23,19 +23,23 @@
             <div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">餐廳名稱</span>
-                    <input type="text" class="form-control" placeholder="" name="rest_name">
+                    <input type="text" class="form-control" placeholder="" name="rest_name"
+                        value="{{request.user_info.2}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">餐廳地址</span>
-                    <input type="text" class="form-control" placeholder="" name="rest_address">
+                    <input type="text" class="form-control" placeholder="" name="rest_address"
+                        value="{{request.user_info.3}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">管理人</span>
-                    <input type="text" class="form-control" placeholder="" name="rest_manager">
+                    <input type="text" class="form-control" placeholder="" name="rest_manager"
+                        value="{{request.user_info.4}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">餐廳電話</span>
-                    <input type="tel" class="form-control" placeholder="" name="rest_phone">
+                    <input type="tel" class="form-control" placeholder="" name="rest_phone"
+                        value="{{request.user_info.5}}">
                 </div>
 
                 <hr>
@@ -45,19 +49,23 @@
                 </div>
                 <div class="input-group mb-2 mt-2 ">
                     <span class="input-group-text col-md-2">公司註冊名稱</span>
-                    <input type="text" class="form-control" placeholder="" name="co_name">
+                    <input type="text" class="form-control" placeholder="" name="co_name"
+                        value="{{request.user_info.6}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">公司地址</span>
-                    <input type="text" class="form-control" placeholder="" name="co_address">
+                    <input type="text" class="form-control" placeholder="" name="co_address"
+                        value="{{request.user_info.7}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">負責人</span>
-                    <input type="text" class="form-control" placeholder="" name="co_owner">
+                    <input type="text" class="form-control" placeholder="" name="co_owner"
+                        value="{{request.user_info.8}}">
                 </div>
                 <div class="input-group mb-2 mt-2  ">
                     <span class="input-group-text col-md-2">負責人電話</span>
-                    <input type="tel" class="form-control" placeholder="" name="owner_phone">
+                    <input type="tel" class="form-control" placeholder="" name="owner_phone"
+                        value="{{request.user_info.9}}">
                 </div>
             </div>
             <div class="justify-content-center align-items-center d-flex mt-5">
