--- a/app/templates/customer_login.html
+++ b/app/templates/customer_login.html
@@ -1,7 +1,8 @@
 {% extends "customer_base.html" %}
 {% load static %}
 {% block content %}
-
+ <!--登入畫面動畫Link-->
+<link rel="stylesheet" type="text/css" href="{%static 'style.css'%}">
 
 <div class="container justify-content-center d-flex ">
     <div class="main zoomer">
