--- a/app/templates/customer_rest_orderPG.html
+++ b/app/templates/customer_rest_orderPG.html
@@ -29,37 +29,44 @@
                 <hr>
                 {% for meals in menu %}
                 <div class="card mx-4 mt-3 mb-3" style="width: 15rem";>
-                    <div class="mt-3 mb-3 justify-content-center d-flex">
-                        <img src="{%static 'media/menu/'%}{{meals.meals_owner}}/{{meals.meals_image}}"
-                            class="card-img-top" style="height: 120px;width: 120px;">
-                    </div>
-                    <div class="card-body">
-                        <div class="input-group mt-2">
-                            <span class="input-group-text">名稱</span>
-                            <input type="text" class="form-control" id="meals_name{{meals.meals_number}}"
-                                    name="meals_name{{meals.meals_number}}" value='{{meals.meals_name}}' readonly>
+                    <form method="POST" action="/add_to_cart/">
+                        {% csrf_token %}
+                        <div class="mt-3 mb-3 justify-content-center d-flex">
+                            <img src="{%static 'media/menu/'%}{{meals.meals_owner}}/{{meals.meals_image}}"
+                                class="card-img-top" style="height: 120px;width: 120px;">
                         </div>
-                        <div class="input-group mt-2">
-                            <span class="input-group-text">價格</span>
-                            <input type="text" class="form-control" id="meals_prices{{meals.meals_number}}"
-                                name="meals_prices{{meals.meals_number}}" value='{{meals.meals_price}}' readonly>
+                        <div class="card-body">
+                            <div class="input-group mt-2">
+                                <span class="input-group-text">名稱</span>
+                                <input type="text" class="form-control" id="meals_name{{meals.meals_number}}"
+                                        name="meals_name{{meals.meals_number}}" value='{{meals.meals_name}}' readonly>
+                            </div>
+                            <div class="input-group mt-2">
+                                <span class="input-group-text">價格</span>
+                                <input type="text" class="form-control" id="meals_prices{{meals.meals_number}}"
+                                    name="meals_prices{{meals.meals_number}}" value='{{meals.meals_price}}' readonly>
+                            </div>
+                            <div class="input-group mt-2">
+                                <span class="input-group-text">折扣</span>
+                                <input type="text" class="form-control" id="meals_discount_values{{meals.meals_number}}"
+                                    name="meals_discount_values{{meals.meals_number}}" value='{{meals.meals_discount_values}}' readonly>
+                                <span class="input-group-text">% off</span>
+                            </div>
+                            <div class="input-group mt-2">
+                                <span class="input-group-text">描述</span>
+                                <textarea class="form-control" name="meals_meals_description{{meals.meals_number}}" readonly>
+                                    {{meals.meals_description}}</textarea>
+                            </div>
+                            <div class="input-group mt-2 mb-3">
+                                <span class="input-group-text">數量</span>
+                                <input type="number" class="form-control" id="meals_quantity{{ meals.meals_number }}"
+                                        name="meals_quantity{{ meals.meals_number }}" value="0">
+                            </div>
+                            <!-- 添加隐藏的输入字段 -->
+                            <input type="hidden" name="meals_id" value="{{meals.meals_number}}">
+                            <button type="submit" class="btn btn-primary">加入購物車</button>
                         </div>
-                        <div class="input-group mt-2">
-                            <span class="input-group-text">折扣</span>
-                            <input type="text" class="form-control" id="meals_discount_values{{meals.meals_number}}"
-                                name="meals_discount_values{{meals.meals_number}}" value='{{meals.meals_discount_values}}' readonly>
-                            <span class="input-group-text">% off</span>
-                        </div>
-                        <div class="input-group mt-2">
-                            <span class="input-group-text">描述</span>
-                            <textarea class="form-control" name="meals_meals_description{{meals.meals_number}}" readonly>{{meals.meals_description}}</textarea>
-                        </div>
-                        <div class="input-group mt-2 mb-3">
-                            <span class="input-group-text">數量</span>
-                            <input type="number" class="form-control" id="meals_quantity{{ meals.meals_number }}" name="meals_quantity{{ meals.meals_number }}" value="0">
-                        </div>
-                        <a href="#" class="btn btn-primary">加入購物車</a>
-                    </div>
+                    </form>
                 </div>
                 {% endfor %}
             </div>
