--- a/app/templates/customer_cart.html
+++ b/app/templates/customer_cart.html
@@ -3,37 +3,44 @@
 {% block content %}
 
 <div class="container-fluid">
-    <div class="shadow-lg p-3 mb-3 bg-body rounded justify-content-center d-flex">
+    <div class="shadow-lg p-3 mb-3 bg-body rounded justify-content-center">
         <div class="table-responsive">
-            <table class="table caption-top">
+            <table class="table caption-top table-hover table-stripe table-bordered">
                 <caption>List of users</caption>
                     <thead class="table-dark">
                         <tr>
                             <th scope="col">圖片</th>
                             <th scope="col">餐點名稱</th>
-                            <th scope="col">餐點原價</th>
                             <th scope="col">數量</th>
+                            <th scope="col">原價</th>
                             <th scope="col">折扣</th>
                             <th scope="col">價格</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for data in total_meals %}
                         <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tfoot>
 
+                            <th scope="row">
+                                <img src="{%static 'media/menu/'%}{{data.meals_owner}}/{{data.meals_image}}"
+                                class="card-img-top" style="height: 60px;width: 60px;">
+                            </th>
+                            <td>{{data.meals_name}}</td>
+                            <td>{{data.meal_count}}</td>
+                            <td>{{data.meals_price}}</td>
+                            <td>{{data.meals_discount_values}}</td>
+                            <td>
+                                <script>
+                                    var mealCount = {{ data.meal_count }};
+                                    var mealPrice = {{ data.meals_price }};
+                                    var discountValues = {{ data.meals_discount_values }};
+                                    var total = (1 - discountValues / 100) * mealPrice * mealCount;
+                                    document.write(total.toFixed(2)); // 显示结果，保留两位小数
+                                </script>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        <tfoot>
                         </tfoot>
                     </tbody>
             </table>
