--- a/app/templates/customer_cart.html
+++ b/app/templates/customer_cart.html
@@ -2,61 +2,91 @@
 {% load static %}
 {% block content %}
 
+
+<style>
+/* 自定義的文字大小 */
+    :root {
+        --display-font-size-6: 0.5rem;
+        --display-font-weight: 300;
+        --display-line-height: 1.5; /* 使用您所需的实际值 */
+    }
+    small {
+        font-size: var(--display-font-size-6);
+        font-weight: var(--display-font-weight);
+        line-height: var(--display-line-height);
+    }
+</style>
+
+
 <div class="container-fluid">
     <div class="shadow-lg p-3 mb-3 bg-body rounded justify-content-center">
         <div class="table-responsive">
             {% if grouped_meals %}
             {% for owner, meals_list in grouped_meals.items %}
             <table class="table caption-top table-hover table-stripe table-bordered">
-                <caption>{{owner}}</caption>
+                <caption>餐廳名稱：{{owner}}</caption>
                     <thead class="table-dark">
                         <tr>
                             <th scope="col">圖片</th>
                             <th scope="col">餐點名稱</th>
+                            <th scope="col">點餐人</th>
                             <th scope="col">數量</th>
                             <th scope="col">原價</th>
-                            <th scope="col">折扣</th>
+                            <th scope="col">折扣<small>(%OFF)</small></th>
                             <th scope="col">價格</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for data in meals_list %}
-                        <tr>
-                            <th scope="row">
-                                <img src="{% static 'media/menu/' %}{{ data.meals_owner }}/{{ data.meals_image }}"
-                                    class="card-img-top" style="height: 60px; width: 60px;">
-                            </th>
-                            <td style="vertical-align: middle;">
-                                <p class="text-primary">{{ data.meals_name }}</p>
-                            </td>
-                            <td style="vertical-align: middle;">
-                                <div class="input-group">
-                                    <input type="number" class="form-control" name="meal_count_{{ data.meals_number }}" id="meal_count_{{ data.meals_number }}" value="{{ data.meal_count }}">
-                                </div>
-                            </td>
-                            <td style="vertical-align: middle;">{{ data.meals_price }}</td>
-                            <td style="vertical-align: middle;">{{ data.meals_discount_values }}</td>
-                            <td style="vertical-align: middle;">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="total_{{ data.meals_number }}" id="total_{{ data.meals_number }}">
-                                </div>
-                            </td>
+                    {% for data in meals_list %}
+                    <tr>
+                        <th scope="row">
+                            <img src="{% static 'media/menu/' %}{{ data.meals_owner }}/{{ data.meals_image }}"
+                                class="card-img-top" style="height: 60px; width: 60px;">
+                        </th>
+                        <td style="vertical-align: middle;">
+                            <p class="text-primary">{{ data.meals_name }}</p>
+                        </td>
+                        <td style="vertical-align: middle;">
+                            <p class="text-primary">{{ data.meals_name }}</p>
+                        </td>
+                        <td style="vertical-align: middle;">
+                            <div class="input-group">
+                                <input type="number" class="form-control" name="meal_count_{{ data.meals_number }}" id="meal_count_{{ data.meals_number }}" value="{{ data.meal_count }}">
+                            </div>
+                        </td>
+                        <td style="vertical-align: middle;">{{ data.meals_price }}</td>
+                        <td style="vertical-align: middle;">{{ data.meals_discount_values }}</td>
+                        <td style="vertical-align: middle;">
+                            <div class="input-group">
+                                <input type="tel" class="form-control" name="total_{{ data.meals_number }}" id="total_{{ data.meals_number }}" value="" readonly>
+                            </div>
                             <script>
-                                var mealCountInput = document.querySelector("#meal_count_{{ data.meals_number }}");
-                                var mealPrice = {{ data.meals_price }};
-                                var discountValues = {{ data.meals_discount_values }};
-                                var totalElement = document.querySelector("#total_{{ data.meals_number }}");
-                                mealCountInput.addEventListener("input", function() {
-                                    var mealCount = parseInt(mealCountInput.value);
-                                    var total = (1 - discountValues / 100) * mealPrice * mealCount;
-                                    totalElement.value = total.toFixed(0);
-                                });
+                                // 自定義函數，接收<input>內的值
+                                function setupEventListener(mealCountId, totalId) {
+                                    var mealPrice = {{ data.meals_price }};
+                                    var discountValues = {{ data.meals_discount_values }};
+                                    var mealCountInput = document.getElementById(mealCountId);
+                                    var totalInput = document.getElementById(totalId);
+                                    // 初始化，並運算初始值的<input>
+                                    var initialMealCount = parseInt(mealCountInput.value);
+                                    var initialTotal = (1 - discountValues / 100) * mealPrice * initialMealCount;
+                                    totalInput.value = initialTotal.toFixed(2);
+                                    //監聽<input>值的異動並做運算修正
+                                    mealCountInput.addEventListener("input", function() {
+                                        var mealCount = parseInt(mealCountInput.value);
+                                        var total = (1 - discountValues / 100) * mealPrice * mealCount;
+                                        totalInput.value = total.toFixed(2);
+                                    });
+                                }
+                                // 循環執行
+                                setupEventListener("meal_count_{{ data.meals_number }}", "total_{{ data.meals_number }}");
                             </script>
-                        </tr>
-                        {% endfor %}
-                        <tfoot>
-                        </tfoot>
-                    </tbody>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tfoot>
+                    </tfoot>
+                </tbody>
             </table>
             {% endfor %}
             {% else %}
