--- a/app/templates/customer_meal.html
+++ b/app/templates/customer_meal.html
@@ -197,7 +197,10 @@
                 <div class="card mx-2 mt-3 mb-2" style="width: 15rem";>
                     <form action="/add_to_cart/" method="POST">
                         {% csrf_token %}
-                        <div class="mt-3 mb-3 justify-content-center d-flex">
+                        <div class="mt-3 mb-3 justify-content-center d-flex position-relative">
+                             <div class="mt-2 mb-2 position-absolute bottom-0 end-0 bg-info text-dark rounded">
+                                {{meals.meals_discount_values}} % OFF
+                            </div>
                             <img src="{%static 'media/menu/'%}{{meals.meals_owner}}/{{meals.meals_image}}"
                                 class="card-img-top" style="height: 120px;width: 120px;">
                         </div>
@@ -212,12 +215,7 @@
                                 <input type="text" class="form-control" id="meals_prices{{meals.meals_number}}"
                                     name="meals_prices{{meals.meals_number}}" value='{{meals.meals_price}}' readonly>
                             </div>
-                            <div class="input-group mt-2">
-                                <span class="input-group-text">折扣</span>
-                                <input type="text" class="form-control" id="meals_discount_values{{meals.meals_number}}"
-                                    name="meals_discount_values{{meals.meals_number}}" value='{{meals.meals_discount_values}}' readonly>
-                                <span class="input-group-text">% off</span>
-                            </div>
+
                             <div class="input-group mt-2">
                                 <span class="input-group-text">描述</span>
                                 <textarea class="form-control" name="meals_meals_description{{meals.meals_number}}" readonly>{{meals.meals_description}}</textarea>
